--- a/award.html
+++ b/award.html
@@ -99,13 +99,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0014.jpg?itok=kdA-AsZQ
       " style="width:100%">
-      <h3>Doctorate,Univ.of poitiers </h3>
-      <p>on january 25th 1937 Tesla got the certificate of honorary doctorate from the universities of poitiers </p>
+      <h3>Certificate of Honorary Doctorate Awarded to Tesla from The University of Poitiers </h3>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award5.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0003.jpg?itok=fpOEWhNy" alt="Nikola Tesla Awards 6" style="width:100%">
       <h3>Certificate of permanent membership of the Serbian Royal Academy awarded to Tesla</h3>
-      <p>on 7 th march 1937 Tesla was the first scientist nominated for permanetnt membership of the serbian royal academy of sciences but wasnt initially elected.</p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award6.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0013.jpg?itok=tSlec3sv" alt="Nikola Tesla Awards 7" style="width:100%">
