--- a/award.html
+++ b/award.html
@@ -110,7 +110,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0013.jpg?itok=tSlec3sv" alt="Nikola Tesla Awards 7" style="width:100%">
       <h3>Certificate of honorary doctorate from the University of Zagreb</h3>
-      <p>On June 15th 1926 Tesla received a diploma of honorary doctorate from the faculcity of engeering university of belgrade</p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award7.html">Know More...</a></button></p>
     </div>
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0015.jpg?itok=i2ToQo8P" alt="Nikola Tesla Awards 8" style="width:100%">
