--- a/award.html
+++ b/award.html
@@ -115,7 +115,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-quarter">
       <img src="https://teslauniverse.com/sites/default/files/styles/default_medium_watermark/public/images/award_0015.jpg?itok=i2ToQo8P" alt="Nikola Tesla Awards 8" style="width:100%">
       <h3>Certificate of Dr. Honoris Causa awarded to Tesla from the University of Paris </h3>
-      <p>on 6th November 1937 the unuversity of paris awarded Nikola Tesla the Dr.Honoris Causa of technical science </p>
+      <p><button class="w3-button w3-black w3-round-large"><a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award8.html">Know More...</a></button></p>
     </div>
 
     </div>
