--- a/award6.html
+++ b/award6.html
@@ -85,7 +85,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p><button class="w3-button w3-black w3-round-large"><a href="https://tesyamarsella.github.io/">Tesya Marsella</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://kireieasya.github.io/">Kirei Easya</a></button></p>
  
-    
+<a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/award7.html" class="next round">&#8250;</a>    
     
   <!-- End footer -->
   </footer>
