--- a/biography.html
+++ b/biography.html
@@ -95,7 +95,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/lampu.png" style="width:100%">
 
-        <img src="" style="width:100%">
+        <img src="https://pbs.twimg.com/media/Da1mS_iWkAEvdxW.jpg" style="width:100%">
 
       </div>
 
@@ -105,7 +105,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
-        <img src="https:"" style="width:100%">
+        <img src="https://www.bing.com/th?id=OIP.0J_r9Uw6f-23DDuPhBEgZgHaHa&pid=Api&rs=1&p=0" style="width:100%">
 
         <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/tangankesetrum.png?raw=true" style="width:100%">
 
