--- a/biography.html
+++ b/biography.html
@@ -95,7 +95,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/lampu.png" style="width:100%">
 
-        <img src="https://media.musely.com/u/09655390-6450-469c-87a6-f0d1f2bb1125.jpg" style="width:100%">
+        <img src="https://i.pinimg.com/originals/42/e7/de/42e7dede23438c6fc89060a167eb65f4.jpg" style="width:100%">
         
 
       </div>
