--- a/biography.html
+++ b/biography.html
@@ -93,7 +93,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
         <img src="https://r.hswstatic.com/w_907/gif/podcasts/missedinhistory-podcasts-wp-content-uploads-sites-99-2015-07-tesla-2-660x357.jpg" style="width:100%">
 
-        <img src="https://www.abc.net.au/radionational/image/7136794-3x4-340x453.jpg" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqBiasbsXY5zFo6m45mm-jGv_vt268ERmb6p6GXReviTOsAs9ULA" style="width:100%">
 
         <img src="https://i.pinimg.com/originals/42/e7/de/42e7dede23438c6fc89060a167eb65f4.jpg" style="width:100%">
         
@@ -102,7 +102,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
       <div class="w3-half">
 
-        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/listrik.png" style="width:100%">
+        <img src=""https://www.abc.net.au/radionational/image/7136794-3x4-340x453.jpg" style="width:100%">
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
