--- a/biography.html
+++ b/biography.html
@@ -102,7 +102,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
       <div class="w3-half">
 
-        <img src=""https://www.abc.net.au/radionational/image/7136794-3x4-340x453.jpg" style="width:100%">
+        <img src="" style="width:100%">
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
