--- a/biography.html
+++ b/biography.html
@@ -102,7 +102,7 @@ Nikola Tesla adalah seorang penemu, fisikawan, teknisi mekanika, dan teknisi lis
 
       <div class="w3-half">
 
-        <img src="" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqBiasbsXY5zFo6m45mm-jGv_vt268ERmb6p6GXReviTOsAs9ULA" style="width:100%">
 
         <img src="http://www.croatianhistory.net/gif/science/tesla/tesla_zivich640.jpg" style="width:100%">
 
