--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
 <title>Nikola Tesla - Contact</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"<!DOCTYPE html>
+<html>
+<title>Nikola Tesla - Contact</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -72,7 +77,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="Adam" style="width:100%">
+        <img src="23.jpg" alt="Adam" style="width:100%">
         <div class="w3-container">
           <h3>Adam Rafif Faqih</h3>
           <p class="w3-opacity">Leader</p>
@@ -173,6 +178,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
   <!-- End footer -->
   </footer>
+
 
 <!-- END PAGE CONTENT -->
 </div>
