--- a/biography.html
+++ b/biography.html
@@ -119,7 +119,7 @@ After Wardenclyffe, Tesla experimented with a series of inventions in the 1910s 
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
-    <p style=:font-size:30%;text-align:left;">Source : https://en.wikipedia.org/wiki/Nikola_Tesla <p>
+     <p style=:font-size:30%;text-align:left;"> Source : <a href="https://en.wikipedia.org/wiki/Nikola_Tesla#cite_note-10"></a> <p>
  
     
     
