--- a/invention.html
+++ b/invention.html
@@ -78,38 +78,41 @@ p.serif{font-family: "Courier New";font-size: 30px;text-align: left;}
 p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 </style>
 
-<a href="#motorlistrik">1. Motor Listrik</a>&nbsp;<a href="#radio">2. Radio</a>&nbsp;<a href="#transfer nirkabel">3. Transfer Nirkabel Jarak Jauh</a>&nbsp;<a href="#teleautomaton">5. Teleautomaton (Remot Control)</a>&nbsp;<a href="#pesawat tanpa sayap">5. Pesawat Tanpa Sayap</a>
+<a href="#teslacoil">1. The Tesla Coil</a>&nbsp;<a href="#radio">2. Radio</a>&nbsp;<a href="#wirelessenergytransmission">3. Wireless Energy Transmission</a>&nbsp;<a href="#teleautomaton">4. Remote Controlled Navies</a>&nbsp;<a href="#aircraftwithoutwings">5. Aircraft without Wings</a>
 
 <h2 id="motorlistrik"></h2>
-<p class="serif"><b>1. Motor Listrik</b></p>
+<p class="serif"><b>1. The Tesla Coil</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Motor-Listrik%20(1).jpg?raw=true" width="500">
-<p class="sansserif">Tesla merupakan orang pertama yang menemukan peralatan mesin tanpa menggunakan minyak bumi. Pemikiran Tesla ini bermula dari keresahannya ketergantungan manusia terhadap minyak bumi, hingga dirinya kemudian menemukan cara dengan memusatkan kekuatan berputar pada medan magnet.Penemuan Tesla ini memang harus menyerah pada krisis ekonomi yang melanda dunia pada tahun 1930, juga karena perang dunia. Namun temuan Tesla tersebut merupakan cikal bakal dari penemuan-penemuan besar lainnya terkait motor listrik. General Motor, sebuah perusahaan mobil, adalah perusaan yang telah memopulerkan penemuan Tesla dalam bidang motor listrik. Berkat penemuan Tesla tersebut, kini kita bisa menikmati alat-alat listrik, peralatan mesin, dan jam tangan listrik.</p><a href="#top">Go to top</a>
+<p class="sansserif">A Tesla coil is an electrical resonant transformer circuit designed by inventor Nikola Tesla in 1891.It is used to produce high-voltage, low-current, high frequency alternating-current electricity.Tesla experimented with a number of different configurations consisting of two, or sometimes three, coupled resonant electric circuits.
+
+Tesla used these circuits to conduct innovative experiments in electrical lighting, phosphorescence, X-ray generation, high frequency alternating current phenomena, electrotherapy, and the transmission of electrical energy without wires. Tesla coil circuits were used commercially in sparkgap radio transmitters for wireless telegraphy until the 1920s,and in medical equipment such as electrotherapy and violet ray devices. Today, their main usage is for entertainment and educational displays, although small coils are still used as leak detectors for high vacuum systemsChances are that you have already seen this invention. It is a tower (of any height) that uses coils to shoot lightning out into the air. The capacitors store and build up the energy to create a spark gap then shoot the energy into the air like lightning bolts. Tesla Coils can be found in museums and science centers as entertainment, they never took on much of a purpose beyond scientific testing.</p><a href="#top">Go to top</a>
 <br>
 <br>
 <h2 id="radio"></h2>
 <p class="serif"><b>2. Radio</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Radio-Tesla.jpg?raw=true"width="500">
-<p class="sansserif">Mungkin orang-orang menganggap kalau perangkat radio ditemukan oleh Guglielmo Marconi dan mendapatkan hak paten pada tahun 1904. Akan tetapi sembilan tahun sebelum itu, tepatnya pada 1895, Tesla berhasil mengirimkan sinyal radio dengan jangkauan mencapai 50 mil. Penemuannya ini dia selesaikan pada tahun 1897.
-Pemberian hak paten terhadap siapa yang menemukan radio memang pernah menjadi kontroversi. Meskipun penemuan Tesla lebih dulu diterima pihak paten AS, namun kantor paten AS menyatakan kalau radio merupakan penemuan Marconi. Hal tersebut berlangsung selama 39 tahun kemudian, sebelum pemerinta USA menyatakan bahwa Nikola Tesla merupakan orang yang pertama kali menemukan radio, yakni pada 1943, empat bulan setelah Tesla wafat.</p><a href="#top">Go to top</a>
+<p class="sansserif">Before his lab burnt down, Tesla was working on developing a radio. He was going to send the signal 50 miles but before he could rebuild his lab and his equipment, an Italian man in England was able to secure the patent for the device. Tesla’s radio would have been stronger if he had been able to use it.</p><a href="#top">Go to top</a>
 <br>
 <br>
 <h2 id="transfer nirkabel"></h2>
-<p class="serif"><b>3. Transfer Energi Nirkabel Jarak Jauh</b></p>
+<p class="serif"><b>3.  Wireless Energy Transmission</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Tower-Tesla.jpeg?raw=true"width"500">
-<p class="sansserif">Isi kepala Nikola Tesla tampak tak pernah ada habisnya. Setelah dia menyelsaikan suatu eksperimen, dia menulis sebuah artikel di Century Magazine, dan apa yang dipaparkan Tesla pada saat itu dianggap sesuatu yang amat sangat gila. Bagaimana tidak, pada saat itu dia berpikir mengenai kemungkinan menangkap energi dari sinar matahari, berkomunikasi secara global, listrik wireless, dan lain-lain yang dilakukan melalui transmisi tower.Untuk mengembangkan transmisi energi dan energi tersebut dapat dipancarkan dari jarak yang sangat jauh, Tesla membangun sebuah Menara Wardenclyffe, di Shoreham, Long Island. Tower tersebut berfungsi sebagai sarana telekomunikasi nirkabel dan pengiriman daya listrik. Dan ternyata, ide gila Tesla saat itu benar-benar terjadi, dan saat ini pun manusia di seluruh dunia menikmati hasil dari pemikiran gila Tesla yang terlalu maju.</p><a href="#top">Go to top</a>
+<p class="sansserif">As someone almost completely associated with electricity, it shouldn’t be surprising that many of Tesla’s patents are in the field of electrical generation and transmission. We have Tesla to thank after all for Alternating Current (AC), which has been used to wire much of the world with electrical power.What a lot of people don’t know is that Tesla also tried to build a tower that would transmit electricity through the air and even got American Financier J.P. Morgan to finance the building of Wardenclyffe Tower on the North Shore of Long Island, which Tesla hoped to adapt to transmit electricity to New York City.
+
+Morgan balked at the electricity transmission scheme and refused to fund the rest of the project, which Tesla had to abandon in 1906, tearing down Wardenclyffe Tower a decade later in 1917.</p><a href="#top">Go to top</a>
 <br>
 <br>
 <h2 id="teleautomaton"></h2>
-<p class="serif"><b>4. Teleautomaton (Remot Control)</b></p>
+<p class="serif"><b>4. Remote Controlled Navies</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Remote-Control-Tesla.jpg?raw=true"width"500">
-<p class="sansserif">Pada 1898, Tesla mendemonstrasikan sebuah temuannya di hadapan orang-orang di Madison Square Garden. Pada demonstrasinya tersebut ia menampilkan sebuah perahu yang berada di aquarium besar bergerak-gerak. Pada saat itu Tesla mengatakan kalau perahu itu dia gerakkan melalui pikirannya, membuat orang-orang takjub akan apa yang dilakukannya. Padahal, perahu tersebut dia gerakkan melalui sinyal radio dengan menggunakan remot kontrol dari kayu.</p><a href="#top">Go to top</a>
+<p class="sansserif">While Tesla is best known for his work with electricity, this isn’t the only area Tesla worked in. Another major area of work for Tesla was military technology. Like Alfred Nobel, Tesla believed that the best way to prevent war was to make it either utterly pointless or so catastrophic for the participants that no one would be mad enough to go to war again.With this in mind, Tesla invented a small boat that he could start, stop, and steer with radio signals. He hoped that the by removing humans from the equation that “battle ships [sic] will cease to be built and the most tremendous artillery afloat will be of no more use than so much scrap iron.”</p><a href="#top">Go to top</a>
 <br>
 <br>
 <h2 id="pesawat tanpa sayap"></h2>
-<p class="serif"><b>5. Pesawat Tanpa Sayap</b></p>
+<p class="serif"><b>5. Aircraft without Wings</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/1357d6443577adc.jpg?raw=true"width"500">
-<p class="sansserif">Sewaktu Perang Dunia I pecah, Tesla membayangkan penerapan energi nirkabel dapat meningkatkan sistem kerja transportasi. Dia mengklaim kalau sebuah pesawat tak bersayap dan tanpa awak, atau Airship, dapat mengangkut penumpang dari New York ke London dalam waktu tiga jam dengan menggunakan energi listrik melalui transfer energi nirkabel.
-Tujuan pesawat tanpa sayap tersebut telah ditentukan sebelumnya. Lebih jauh lagi, Tesla bahkan mengatakan kalau Airship juga bisa digunakan dalam perang, terutama melalui serangan udara. Tentu saja banyak orang yang menganggap klaim Testa merupakan ide gila. Akan tetapi Tesla terus berusaha meyakinkan Departemen Pertahanan AS tentang alat yang mampu terbang tanpa sayap untuk mengirimkan bahan peledak ke musuh. Ide Tesla tersebut kini kita lihat dalam bentuk rudal.</p><a href="#top">Go to top</a>
+<p class="sansserif">When World War I broke out, Tesla envisioned the application of wireless energy to improve the transportation work system. He claims that an unmanned and unmanned aircraft, or Airship, can transport passengers from New York to London in three hours by using electrical energy through wireless energy transfer.
+The purpose of the wingless aircraft was predetermined. Furthermore, Tesla even said that the Airship could also be used in war, especially through air strikes. Of course many people consider Testa's claim to be a crazy idea. However, Tesla continued to try to convince the US Department of Defense about a tool capable of flying without wings to send explosives to the enemy. The idea of ​​Tesla we now see in the form of missiles.</p><a href="#top">Go to top</a>
 
 
 
