--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="23.jpg" alt="Adam" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/23.jpg?raw=true" alt="Adam" style="width:75%">
         <div class="w3-container">
           <h3>Adam Rafif Faqih</h3>
           <p class="w3-opacity">Leader</p>
@@ -88,7 +88,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team1.jpg" alt="Ale" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/IMG_20190406_210833.jpg?raw=true" alt="Ale" style="width:45%">
         <div class="w3-container">
           <h3>Alexandra</h3>
           <p class="w3-opacity">Co-Leader</p>
@@ -126,7 +126,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="Hilal" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/1554645745406.jpg?raw=true" alt="Hilal" style="width:100%">
         <div class="w3-container">
           <h3>Hilal Ahmad</h3>
           <p class="w3-opacity">Web Designer</p>
