--- a/biography.html
+++ b/biography.html
@@ -91,23 +91,19 @@ p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 
       <div class="w3-half">
 
-        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="https://images.app.goo.gl/dSA5peQFpY1bngjs6" style="width:100%">
 
-        <img src="/w3images/rocks.jpg" style="width:100%">
-
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="https://images.app.goo.gl/6uwDANKFJaF8tM7PA" style="width:100%">
 
       </div>
 
       <div class="w3-half">
 
-        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="https://images.app.goo.gl/B6AS8magh3xszgNPA" style="width:100%">
 
-        <img src="/w3images/chef.jpg" style="width:100%">
+        <img src="https://images.app.goo.gl/dmMg19w3mFrB2ScBA" style="width:100%">
 
-        <img src="/w3images/wedding.jpg" style="width:100%">
-
-        <img src="/w3images/p6.jpg" style="width:100%">
+        <img src="https://images.app.goo.gl/EFLMucNXJnLJgmjX6" style="width:100%">
 
       </div>
   
