--- a/biography.html
+++ b/biography.html
@@ -110,7 +110,7 @@ p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
   
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadhila</a></button></p>
+    <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
     <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
 
  
