--- a/biography.html
+++ b/biography.html
@@ -91,19 +91,19 @@ p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 
       <div class="w3-half">
 
-        <img src="https://images.app.goo.gl/dSA5peQFpY1bngjs6" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/4.jpg" style="width:100%">
 
-        <img src="https://images.app.goo.gl/6uwDANKFJaF8tM7PA" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/5.jpg" style="width:100%">
 
       </div>
 
       <div class="w3-half">
 
-        <img src="https://images.app.goo.gl/B6AS8magh3xszgNPA" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/1.jpg" style="width:100%">
 
-        <img src="https://images.app.goo.gl/dmMg19w3mFrB2ScBA" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/2.jpg" style="width:100%">
 
-        <img src="https://images.app.goo.gl/EFLMucNXJnLJgmjX6" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/3.jpg" style="width:100%">
 
       </div>
   
