--- a/biography.html
+++ b/biography.html
@@ -93,7 +93,7 @@ Nikola Tesla was an inventor, physicist, mechanical engineer, and electrician wh
 
       <div class="w3-half">
 
-        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/4.jpg" style="width:100%">
+        <img src="https://i.pinimg.com/originals/53/63/f0/5363f05de6fbcc95ae77df28fbbf4c6d.jpg" style="width:100%">
 
         <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/5.jpg" style="width:100%">
 
