--- a/biography.html
+++ b/biography.html
@@ -95,7 +95,7 @@ Nikola Tesla was an inventor, physicist, mechanical engineer, and electrician wh
 
         <img src="https://i.pinimg.com/originals/53/63/f0/5363f05de6fbcc95ae77df28fbbf4c6d.jpg" style="width:100%">
 
-        <img src="https://www.google.com/imgres?imgurl=https://cdn.pixabay.com/photo/2018/12/04/11/53/bulb-3855379_960_720.jpg&imgrefurl=https://pixabay.com/id/photos/bulb-hitam-dan-putih-cahaya-listrik-3855379/&tbnid=5PmqoSKemkz3iM&vet=1&docid=R-jQV0ijn8lB1M&w=520&h=720&source=sh/x/im" style="width:100%">
+        <img src="https://cdn.pixabay.com/photo/2018/12/04/11/53/bulb-3855379_960_720.jpg" style="width:100%">
 
       </div>
 
