--- a/biography.html
+++ b/biography.html
@@ -113,7 +113,7 @@ Nikola Tesla was an inventor, physicist, mechanical engineer, and electrician wh
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <p><button class="w3-button w3-black w3-round-large"><a href="https://sherlitaf.github.io/">Sherlita Fadilah</a></button></p>
-    <p><button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button></p>
+    <button class="w3-button w3-black w3-round-large"><a href="https://aufadilrahma.github.io/">Aufadil Rahmadi Putra</a></button>
 
  
     
