--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Adam Rafif Faqih</h3>
           <p class="w3-opacity">Leader</p>
-          <p>Hola!Saya bertanggung jawab atas seluruh kinerja anggota dan website.</p>
+          <p>Hola!I am responsible for all members' performance and website.</p>
           <p><a href="https://adamrafif.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -92,7 +92,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Alexandra</h3>
           <p class="w3-opacity">Co-Leader</p>
-          <p>Nihao!Saya bertanggung jawab atas halaman Inventions.</p>
+          <p>Nihao!I am responsible for Inventions's Page.</p>
           <p><a href="https://alexandra63.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -103,7 +103,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Deska Yulianti</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Halo!Saya bertanggung jawab atas halaman Books.</p>
+          <p>Halo!I am responsible for Books's Page.</p>
           <p><a href="https://deskayyy.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -114,7 +114,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Aufadil Rahmadi</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Bonjour!Saya bertanggung jawab atas halaman Biography</p>
+          <p>Bonjour!I am responsible for Biography's Page.</p>
           <p><a href="https://aufadilrahma.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -130,7 +130,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Hilal Ahmad</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Konnichiwa!Saya bertanggung jawab atas halaman inventions</p>
+          <p>Konnichiwa!I am responsible for Inventions's Page.</p>
           <p><a href="https://hilalahmad.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -141,7 +141,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Kirei Easya</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Annyeong!Saya bertanggung jawab atas halaman Awards.</p>
+          <p>Annyeong!I am responsible for Awards's Page.</p>
           <p><a href="https://kireieasya.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -152,7 +152,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Tesya Marsella</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Ciao!Saya bertanggung jawab atas halaman Awards</p>
+          <p>Ciao!I am responsible for Awards's Page.</p>
           <p><a href="https://tesyamarsella.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
@@ -163,7 +163,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <div class="w3-container">
           <h3>Sherlita</h3>
           <p class="w3-opacity">Web Designer</p>
-          <p>Ohayo!Saya bertanggung jawab atas halaman Biography.</p>
+          <p>Ohayo!I am responsible for Biography's Page.</p>
           <p><a href="https://sherlitaf.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
