--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="" alt="Tesya" style="width:100%">
+        <img src="tesyaa.jpg" alt="Tesya" style="width:100%">
         <div class="w3-container">
           <h3>Tesya Marsella</h3>
           <p class="w3-opacity">Web Designer</p>
