--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team4.jpg" alt="Fadil" style="width:100%">
+        <img src="https://cdn.idntimes.com/content-images/avatar/aufadil_200x200.jpg?v=289571101cfff2dabd9ee42773853c9b" alt="Fadil" style="width:100%">
         <div class="w3-container">
           <h3>Aufadil Rahmadi</h3>
           <p class="w3-opacity">Web Designer</p>
