--- a/biography.html
+++ b/biography.html
@@ -73,7 +73,7 @@ p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 </style>
 
 <h2>Nikola Tesla</h2>
-<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Nik.jpg?raw=true"width="800">
+<img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/tesla6.png?raw=true"width="800">
 <br>
 <br>
 
