--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="https://github.com/kireieasya/kireieasya.github.io/blob/master/kireii.jpg?raw=true" alt="Kirei" style="width:100%">
+        <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/kireii.jpg?raw=true" alt="Kirei" style="width:100%">
         <div class="w3-container">
           <h3>Kirei Easya</h3>
           <p class="w3-opacity">Web Designer</p>
