--- a/invention.html
+++ b/invention.html
@@ -27,7 +27,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/biography.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/biography.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>BIOGRAPHY</p>
   </a>
@@ -39,7 +39,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <i class="fa fa-trophy w3-xxlarge"></i>
     <p>AWARDS</p>
   </a>
-  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://smakbo.github.io/tugas-labkom-2019-11-1-nikola-tesla/invention.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>INVENTIONS</p>
   </a>
@@ -80,7 +80,7 @@ p.sansserif{font-family:"Courier New";font-size: 20px;text-align: left;}
 
 <a href="#teslacoil">1. The Tesla Coil</a>&nbsp;<a href="#radio">2. Radio</a>&nbsp;<a href="#wirelessenergytransmission">3. Wireless Energy Transmission</a>&nbsp;<a href="#teleautomaton">4. Remote Controlled Navies</a>&nbsp;<a href="#aircraftwithoutwings">5. Aircraft without Wings</a>
 
-<h2 id="motorlistrik"></h2>
+<h2 id="teslacoil"></h2>
 <p class="serif"><b>1. The Tesla Coil</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Motor-Listrik%20(1).jpg?raw=true" width="500">
 <p class="sansserif">A Tesla coil is an electrical resonant transformer circuit designed by inventor Nikola Tesla in 1891.It is used to produce high-voltage, low-current, high frequency alternating-current electricity.Tesla experimented with a number of different configurations consisting of two, or sometimes three, coupled resonant electric circuits.
