--- a/invention.html
+++ b/invention.html
@@ -94,7 +94,7 @@ Tesla used these circuits to conduct innovative experiments in electrical lighti
 <p class="sansserif">Before his lab burnt down, Tesla was working on developing a radio. He was going to send the signal 50 miles but before he could rebuild his lab and his equipment, an Italian man in England was able to secure the patent for the device. Tesla’s radio would have been stronger if he had been able to use it.</p><a href="#top">Go to top</a>
 <br>
 <br>
-<h2 id="transfer nirkabel"></h2>
+<h2 id="wirelessenergytransmission"></h2>
 <p class="serif"><b>3.  Wireless Energy Transmission</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/Tower-Tesla.jpeg?raw=true"width"500">
 <p class="sansserif">As someone almost completely associated with electricity, it shouldn’t be surprising that many of Tesla’s patents are in the field of electrical generation and transmission. We have Tesla to thank after all for Alternating Current (AC), which has been used to wire much of the world with electrical power.What a lot of people don’t know is that Tesla also tried to build a tower that would transmit electricity through the air and even got American Financier J.P. Morgan to finance the building of Wardenclyffe Tower on the North Shore of Long Island, which Tesla hoped to adapt to transmit electricity to New York City.
@@ -108,7 +108,7 @@ Morgan balked at the electricity transmission scheme and refused to fund the res
 <p class="sansserif">While Tesla is best known for his work with electricity, this isn’t the only area Tesla worked in. Another major area of work for Tesla was military technology. Like Alfred Nobel, Tesla believed that the best way to prevent war was to make it either utterly pointless or so catastrophic for the participants that no one would be mad enough to go to war again.With this in mind, Tesla invented a small boat that he could start, stop, and steer with radio signals. He hoped that the by removing humans from the equation that “battle ships [sic] will cease to be built and the most tremendous artillery afloat will be of no more use than so much scrap iron.”</p><a href="#top">Go to top</a>
 <br>
 <br>
-<h2 id="pesawat tanpa sayap"></h2>
+<h2 id="aircraftwithoutwings"></h2>
 <p class="serif"><b>5. Aircraft without Wings</b></p>
 <img src="https://github.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/blob/master/1357d6443577adc.jpg?raw=true"width"500">
 <p class="sansserif">When World War I broke out, Tesla envisioned the application of wireless energy to improve the transportation work system. He claims that an unmanned and unmanned aircraft, or Airship, can transport passengers from New York to London in three hours by using electrical energy through wireless energy transfer.
