--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="https://raw.githubusercontent.com/SMAKBO/tugas-labkom-2019-11-1-nikola-tesla/master/deskapict.jpg" alt="Deska" style="width:100%">
+        <img src="deskapict.jpg" alt="Deska" style="width:100%">
         <div class="w3-container">
           <h3>Deska Yulianti</h3>
           <p class="w3-opacity">Web Designer</p>
