--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <h3>Hilal Ahmad</h3>
           <p class="w3-opacity">Web Designer</p>
           <p>Konnichiwa!I am responsible for Inventions's Page.</p>
-          <p><a href="https://hilalahmad.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
+          <p><a href="https://hilalfadhila63.github.io/"><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button><a/></p>
         </div>
       </div>
     </div>
